# newengine

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  makedist.sh  readme.md  run.sh
documentation/: dependencies.txt  notes_from_porting.txt
src/editor/: main.cpp
src/engine/: Engine.cpp  Engine.hpp  Global.hpp  global.hpp
src/engine/assets/: Asset.cpp  Asset.hpp
src/engine/entities/: Entity.hpp
src/engine/input/: InputManager.cpp  InputManager.hpp
src/engine/rendering/: Renderer.hpp  VertexArray.cpp  VertexArray.hpp
src/engine/rendering/shaders/: Shader.cpp  Shader.hpp
src/engine/rendering/textures/: Texture.cpp
src/engine/scenes/: Scene.cpp  Scene.hpp
src/engine/scripting/: Script.cpp  Script.hpp  ScriptManager.cpp  ScriptManager.hpp
src/engine/scripting/lexer/: Lexer.cpp  Lexer.hpp
src/engine/scripting/parser/: Parser.cpp  Parser.hpp
src/engine/utility/: Files.cpp  Files.hpp  Hashing.cpp  Hashing.hpp
src/player/: main.cpp
